# easydo-hrms-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  SETUP.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh  test_mcp_tools.py  test_tools.py
.claude/: settings.local.json
api/schema/: database_schema_accurate.json  prod_database_schema.json  staging_database_schema.json
mcp_server/: __init__.py  auth.py  auth_session.py  db.py  fuzzy.py  rbac.py  server.py  sessions.py  supabase_client.py  table_access.json
mcp_server/tools/: __init__.py  analytics.py  attendance.py  auth.py  employee.py  leave.py  location.py  organization.py  policy.py  reports.py  salary.py  self_service.py  sql.py  tasks.py  team.py
scripts/: generate_schema.py
