[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easydo-hrms-mcp"
version = "1.0.0"
description = "MCP Server for EasyDo HRMS - Natural language queries for HR data"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0.0",
    "supabase>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
# Install with: pip install -e ".[direct]"
direct = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
easydo-hrms = "mcp_server.server:run_stdio"
easydo-hrms-sse = "mcp_server.server:run_sse"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
